deploy: b40bcef57b26e48ca0dce147b8f20b86f139bd50

--- a/build_tools/premake.html
+++ b/build_tools/premake.html
@@ -158,7 +158,12 @@
 <p>At Our Machinery we are using <a href="https://premake.github.io/">Premake</a> for our meta build system generator. Premake generates for us the actual build scripts that we then build with <code>tmbuild</code> our one-click build tool. More on tmbuild <a href="./tmbuild.html">here</a>.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#why-use-a-build-configurator">Why Use a Build Configurator?</a></li>
+<li><a href="#what-is-premake">What is premake</a></li>
+<li><a href="#the-basic-the-machinery-premake-setup">The Basic The Machinery Premake Setup</a></li>
+<li><a href="#advanced-premake5-adding-functions-to-make-our-live-easier">Advanced Premake5: Adding functions to make our live easier</a></li>
+<li><a href="#the-machinery-project-recommendation">The Machinery Project Recommendation</a></li>
+<li><a href="#basic-premake5-cheat-sheet">Basic Premake5 Cheat Sheet</a></li>
 </ul>
 <h2 id="why-use-a-build-configurator"><a class="header" href="#why-use-a-build-configurator">Why Use a Build Configurator?</a></h2>
 <p>Maintaining different <em>Makefiles</em> and <em>Visual Studio Solution</em> files for a cross platform project can be a lot of work. Especially since you have to adjust the generator a lot for every new platform you support.</p>
