--- a/collaboration.html
+++ b/collaboration.html
@@ -162,7 +162,23 @@ etc, are supported in the collaborative workflow.</p>
 same machine (just start two instances of the_machinery.exe) and connect using the LAN option.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#whos-project-is-edited">Who's project is edited?</a></li>
+<li><a href="#host-or-join-sessions">Host or Join Sessions</a>
+<ul>
+<li><a href="#host-a-lan-server">Host a LAN Server</a>
+<ul>
+<li><a href="#join-a-local-server">Join a local Server</a></li>
+</ul>
+</li>
+<li><a href="#host-internet-server">Host Internet Server</a>
+<ul>
+<li><a href="#join-an-internet-server">Join an internet Server</a></li>
+</ul>
+</li>
+<li><a href="#host-a-discord-based-session">Host a Discord based Session</a></li>
+</ul>
+</li>
+<li><a href="#connected">Connected</a></li>
 </ul>
 <h2 id="whos-project-is-edited"><a class="header" href="#whos-project-is-edited">Who's project is edited?</a></h2>
 <p>In our collaboration model, one of the users always acts as a host. The host invites others to join her in editing <em>her</em> project. All the changes made by the participants in the session end up in the host’s project and it’s the host’s responsibility to save the project, check in the changes into version control, or do whatever else is needed to make the changes permanent.</p>
