--- a/contributing.html
+++ b/contributing.html
@@ -158,7 +158,17 @@
 <p>We are welcoming all contributions to the <a href="https://github.com/OurMachinery/themachinery">Engine</a> or the <a href="https://github.com/OurMachinery/themachinery-books">Books</a>. Any kind of contributions must follow the following requirements.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#contributing-to-books">Contributing to Books</a>
+<ul>
+<li><a href="#contributors-license-agreement">Contributor's License Agreement</a></li>
+</ul>
+</li>
+<li><a href="#contribution-to-the-machinery">Contribution to The Machinery</a>
+<ul>
+<li><a href="#contributors-license-agreement-1">Contributor's License Agreement</a></li>
+</ul>
+</li>
+<li><a href="#code-of-conduct">Code of Conduct</a></li>
 </ul>
 <h2 id="contributing-to-books"><a class="header" href="#contributing-to-books">Contributing to Books</a></h2>
 <p>If you want to make a contribution to <a href="https://github.com/OurMachinery/themachinery-books">this repository</a> (other than a small spelling or formatting fix), please first create an <em>Issue</em> or a <em>Discussion</em> thread, discussing the addition you want to make. Otherwise, there is a chance your submission will be rejected if we decide it does not fit into the structure of this document.</p>
