--- a/editing_workflows/import_assets.html
+++ b/editing_workflows/import_assets.html
@@ -164,7 +164,19 @@
 </ul>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#import-differences-between-meshes-and-textures">Import differences between Meshes and Textures</a></li>
+<li><a href="#major-supported-formats">Major supported formats</a></li>
+<li><a href="#how-to-import-assets-into-the-project">How to import assets into the project</a>
+<ul>
+<li><a href="#import-via-the-file-menu">Import via the file menu</a></li>
+<li><a href="#import-from-url">Import from URL</a></li>
+<li><a href="#drag-and-drop">Drag and drop</a></li>
+</ul>
+</li>
+<li><a href="#adding-the-asset-to-our-scene">Adding the asset to our scene</a></li>
+<li><a href="#about-import-setting">About Import Setting</a></li>
+<li><a href="#video-about-importing-and-creating-an-entity">Video about importing and creating an Entity</a></li>
+<li><a href="#complete-list-of-supported-file-formats">Complete list of supported file formats</a></li>
 </ul>
 <h2 id="import-differences-between-meshes-and-textures"><a class="header" href="#import-differences-between-meshes-and-textures">Import differences between Meshes and Textures</a></h2>
 <p>Assets that are created by e.g. Maya will be of type after they are imported.  Where DCC stands for Digital Content Creation.  Materials wont be imported untill the <code>dcc_asset</code> has been dragged into the scene or used otherweise.</p>
