--- a/editing_workflows/physics.html
+++ b/editing_workflows/physics.html
@@ -159,7 +159,15 @@
 We will only talk about how physics is set up in The Machinery.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#the-physics-simulation-system">The physics simulation system</a>
+<ul>
+<li><a href="#physics-assets">Physics Assets</a></li>
+<li><a href="#physics-components">Physics Components</a></li>
+</ul>
+</li>
+<li><a href="#physics-scripting">Physics scripting</a></li>
+<li><a href="#missing-features">Missing Features</a></li>
+<li><a href="#tutorials">Tutorials</a></li>
 </ul>
 <h2 id="the-physics-simulation-system"><a class="header" href="#the-physics-simulation-system">The physics simulation system</a></h2>
 <p>The physics simulation system introduces two new assets: <em>Physics Material</em> and <em>Physics Collision</em>
