--- a/editing_workflows/prototype_workflow/index.html
+++ b/editing_workflows/prototype_workflow/index.html
@@ -159,7 +159,12 @@
 other entities. </p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#difference-between-a-prototype-an-instance-and-an-asset">Difference between a Prototype, an Instance and an Asset</a></li>
+<li><a href="#instance-properties-inspect">Instance Properties: Inspect</a></li>
+<li><a href="#instance-properties-override">Instance Properties: Override</a></li>
+<li><a href="#instance-properties-reset-or-propagate">Instance Properties: Reset or Propagate</a></li>
+<li><a href="#other-forms-of-prototypes-eg-graphs">Other forms of prototypes: e.g. Graphs</a></li>
+<li><a href="#what-is-next">What is next?</a></li>
 </ul>
 <p>So you can for example create an entity asset that represents a
 room, and then create a house entity that has a bunch of these room entities
