--- a/extending_the_machinery/application_hooks.html
+++ b/extending_the_machinery/application_hooks.html
@@ -158,7 +158,16 @@
 <p>The Machinery allows you to hook your code into specific customization points. Those points happen in different phases and have specific purposes. The biggest difference between the Runner and the Editor is that only the customization points differ in the central update loop.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#application-create">Application Create</a></li>
+<li><a href="#update">Update</a>
+<ul>
+<li><a href="#editor">Editor</a></li>
+<li><a href="#runner">Runner</a></li>
+</ul>
+</li>
+<li><a href="#project-hooks">Project Hooks</a></li>
+<li><a href="#application-shutdown">Application Shutdown</a></li>
+<li><a href="#overview">Overview</a></li>
 </ul>
 <h2 id="application-create"><a class="header" href="#application-create">Application Create</a></h2>
 <p><img src="https://www.dropbox.com/s/vsl0d53ty9rsvbi/tm_guide_app_hook_create.png?dl=1" alt="" /></p>
