--- a/extending_the_machinery/plugin-assets.html
+++ b/extending_the_machinery/plugin-assets.html
@@ -160,7 +160,8 @@ and used by all projects. This is convenient, but sometimes you want plugins tha
 specific, e.g., the gameplay code for a particular game.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#the-two-ways-of-achieving-plugin-only-assets">The two ways of achieving plugin only assets</a></li>
+<li><a href="#how-to-create-a-plugin-asset">How to create a plugin asset</a></li>
 </ul>
 <h2 id="the-two-ways-of-achieving-plugin-only-assets"><a class="header" href="#the-two-ways-of-achieving-plugin-only-assets">The two ways of achieving plugin only assets</a></h2>
 <p>There are two ways of doing this.</p>
