--- a/extending_the_machinery/sample_plugin.html
+++ b/extending_the_machinery/sample_plugin.html
@@ -176,7 +176,9 @@ editor to open up its tab:</p>
 <p><img src="https://www.dropbox.com/s/hats2jgr3wroahz/pong-tab.png?dl=1" alt="Pong tab." /></p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#what-are-the-build-requirements">What are the build Requirements</a></li>
+<li><a href="#build-the-sample-plugin">Build the sample plugin</a></li>
+<li><a href="#sample-plugins">Sample Plugins:</a></li>
 </ul>
 <h3 id="what-are-the-build-requirements"><a class="header" href="#what-are-the-build-requirements">What are the build Requirements</a></h3>
 <p>To build plugins you need three things:</p>
