--- a/extending_the_machinery/the_plugin_system.html
+++ b/extending_the_machinery/the_plugin_system.html
@@ -162,7 +162,10 @@
 </blockquote>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#what-are-the-types-of-plugins">What are the types of plugins?</a></li>
+<li><a href="#what-are-plugins">What are plugins?</a></li>
+<li><a href="#about-apis">About API's</a></li>
+<li><a href="#about-interfaces">About Interfaces</a></li>
 </ul>
 <h2 id="what-are-the-types-of-plugins"><a class="header" href="#what-are-the-types-of-plugins">What are the types of plugins?</a></h2>
 <p>In <em>The Machinery</em> you can have 2 type of plugins: <em>Engine Plugins</em> and <em>Plugin Assets</em>.</p>
