--- a/gameplay_coding/ecs/filtering_entities.html
+++ b/gameplay_coding/ecs/filtering_entities.html
@@ -162,7 +162,8 @@
 </ol>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#filtering-entities">Filtering Entities</a></li>
+<li><a href="#filtering-entities-by-using-tag-components">Filtering Entities by using Tag Components</a></li>
 </ul>
 <h2 id="filtering-entities-1"><a class="header" href="#filtering-entities-1">Filtering Entities</a></h2>
 <p>In an Engine (<a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_engine_i"><code>tm_engine_i</code></a>) you can define the <code>.excluded</code> field. This tells the scheduler that this engine shall <strong>not</strong> run on any entity type that contains these components.</p>
