--- a/gameplay_coding/ecs/how_to_define_a_engine_system.html
+++ b/gameplay_coding/ecs/how_to_define_a_engine_system.html
@@ -158,7 +158,12 @@
 <p>You have to pass the  <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_entity_system_i"><code>tm_entity_system_i</code></a> or <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_engine_i"><code>tm_engine_i</code></a> instance in your register function.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#ask-yourself-those-questions-before-you-design-an-engine--system">Ask yourself those questions before you design an Engine / System</a>
+<ul>
+<li><a href="#how-do-those-questions-translate">How do those questions translate?</a></li>
+</ul>
+</li>
+<li><a href="#what-is-next">What is next?</a></li>
 </ul>
 <h2 id="ask-yourself-those-questions-before-you-design-an-engine--system"><a class="header" href="#ask-yourself-those-questions-before-you-design-an-engine--system">Ask yourself those questions before you design an Engine / System</a></h2>
 <p>The following questions are better explained in the chapter: <a href="https://ourmachinery.github.io/themachinery-books//gameplay_coding/ecs/how_entites_can_interact.html">How entities can interact.</a></p>
