--- a/gameplay_coding/ecs/tagging_entities.html
+++ b/gameplay_coding/ecs/tagging_entities.html
@@ -162,7 +162,14 @@
 </ol>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#using-the-tag-component">Using the Tag Component</a>
+<ul>
+<li><a href="#adding-them-via-the-editor">Adding them via The Editor</a></li>
+<li><a href="#adding-and-accessing-tags-via-c">Adding and Accessing Tags via C</a></li>
+</ul>
+</li>
+<li><a href="#tag-components---entity-type-filter">Tag Components - Entity Type Filter</a></li>
+<li><a href="#filtering">Filtering</a></li>
 </ul>
 <h2 id="using-the-tag-component"><a class="header" href="#using-the-tag-component">Using the Tag Component</a></h2>
 <p>The difference is that the first solution can be used via the <code>tag_component_api</code> and you can add Tags via the Editor to any Entity that has a Tag Component. Later on in your System or Engine you can access the Tagged Entity.</p>
