--- a/getting_started/first_gameplay_project.html
+++ b/getting_started/first_gameplay_project.html
@@ -162,7 +162,10 @@
 </ul>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#how-to-add-some-life-to-your-project">How to add some life to your project</a></li>
+<li><a href="#add-some-movement">Add some movement</a></li>
+<li><a href="#add-physics-based-movement">Add physics-based movement</a></li>
+<li><a href="#what-is-next">What is next?</a></li>
 </ul>
 <h2 id="how-to-add-some-life-to-your-project"><a class="header" href="#how-to-add-some-life-to-your-project">How to add some life to your project</a></h2>
 <p>Let us create a new project and than add some gameplay to it. Before this, let us define a goal:
