--- a/getting_started/introduction_to_c/index.html
+++ b/getting_started/introduction_to_c/index.html
@@ -158,7 +158,10 @@
 <p>This page will link to useful resources about the C Programming language.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#reference">Reference</a></li>
+<li><a href="#tutorials">Tutorials</a></li>
+<li><a href="#videos">Videos</a></li>
+<li><a href="#the-machinery-specials">The Machinery specials</a></li>
 </ul>
 <h2 id="reference"><a class="header" href="#reference">Reference</a></h2>
 <ul>
