--- a/getting_started/introduction_to_c/list_arrays_vector.html
+++ b/getting_started/introduction_to_c/list_arrays_vector.html
@@ -157,7 +157,8 @@
                         <h1 id="arrays-vectors-lists-where-is-my-stdvector-or-list"><a class="header" href="#arrays-vectors-lists-where-is-my-stdvector-or-list">Arrays, Vectors, Lists where is my <code>std::vector&lt;&gt;</code> or <code>List&lt;&gt;</code></a></h1>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#how-to-access-an-element">How to access an element?</a></li>
+<li><a href="#iterate-over-them">Iterate over them</a></li>
 </ul>
 <p>In the foundation we have a great header file or better inline header file the <code>foundation/carray.inl</code> which contains our solution for dynamic growing arrays, lists etc.  When used you are responsible for its memory and have to free the used memory at the end! Do not worry, the API makes it quite easy. </p>
 <p>Let us create an Array of <a href="https://ourmachinery.com/apidoc/foundation/api_types.h.html#structtm_tt_id_t"><code>tm_tt_id_t</code></a>. All we need to do is declare our variable as a pointer of <a href="https://ourmachinery.com/apidoc/foundation/api_types.h.html#structtm_tt_id_t"><code>tm_tt_id_t</code></a>.</p>
