--- a/getting_started/migration_from_unity.html
+++ b/getting_started/migration_from_unity.html
@@ -158,7 +158,25 @@
 <p>When migrating from Unity to The Machinery, there are a few things that are different.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#ui-differences">UI Differences</a></li>
+<li><a href="#questions-you-might-have">Questions you might have</a>
+<ul>
+<li><a href="#where-are-my-gameobjects">Where are my GameObjects?</a>
+<ul>
+<li><a href="#what-is-the-difference-between-a-system-and-an-engine">What is the difference between a System and an Engine?</a></li>
+</ul>
+</li>
+<li><a href="#where-are-my-prefabs">Where are my Prefabs?</a></li>
+<li><a href="#how-do-i-script">How do I script?</a></li>
+<li><a href="#where-are-my-materials-shaders-textures-particle-effects">Where are my Materials, Shaders, Textures, Particle Effects?</a></li>
+<li><a href="#project-data">Project data?</a></li>
+<li><a href="#where-do-i-put-my-assets">Where do I put my assets?</a></li>
+<li><a href="#import-difference-between-unity-and-the-machinery-dcc_asset">Import difference between Unity and The Machinery: <code>.dcc_asset</code></a></li>
+<li><a href="#what-are-common-file-formats-supported">What are common file formats supported?</a></li>
+<li><a href="#where-do-my-source-code-files-go">Where do my source code files go?</a></li>
+<li><a href="#using-visual-scripting">Using Visual Scripting</a></li>
+</ul>
+</li>
 </ul>
 <p><strong>Quick Glossary</strong></p>
 <p>The following table contains common Unity terms on the left and their The Machinery equivalents (or rough equivalent) on the right.</p>
