--- a/getting_started/migration_from_unreal.html
+++ b/getting_started/migration_from_unreal.html
@@ -158,7 +158,19 @@
 <p>When migrating from Unreal Engine 4 (UE4) to The Machinery, there are a few things that are different.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#questions-you-might-have">Questions you might have</a>
+<ul>
+<li><a href="#where-are-my-actors">Where are my Actors?</a></li>
+<li><a href="#where-are-my-blueprints">Where are my Blueprints?</a></li>
+<li><a href="#what-is-the-difference-between-a-system-and-an-engine">What is the difference between a System and an Engine?</a></li>
+<li><a href="#where-are-my-material-instance-shaders-textures-particle-effects-static-mesh-geometry-skeletal-mesh-material-editor">Where are my Material Instance, Shaders, Textures, Particle Effects, Static Mesh, Geometry, Skeletal Mesh, Material Editor?</a></li>
+<li><a href="#project-data">Project data?</a></li>
+<li><a href="#where-do-i-put-my-assets">Where do I put my assets?</a></li>
+<li><a href="#what-are-common-file-formats-supported">What are common file formats supported?</a></li>
+<li><a href="#where-do-my-source-code-files-go">Where do my source code files go?</a></li>
+<li><a href="#using-visual-scripting">Using Visual Scripting</a></li>
+</ul>
+</li>
 </ul>
 <p><strong>Quick Glossary</strong></p>
 <p>The following table contains common UE4 terms on the left and their The Machinery equivalents (or rough equivalent) on the right.</p>
