--- a/getting_started/new_project.html
+++ b/getting_started/new_project.html
@@ -168,7 +168,14 @@
 </ul>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#about-scenes">About Scenes</a></li>
+<li><a href="#new-project">New Project</a>
+<ul>
+<li><a href="#the-core">The Core</a></li>
+<li><a href="#how-to-add-some-life-to-your-project">How to add some life to your project</a></li>
+<li><a href="#project-structure-recommendation">Project Structure Recommendation</a></li>
+</ul>
+</li>
 </ul>
 <h1 id="about-scenes"><a class="header" href="#about-scenes">About Scenes</a></h1>
 <p>In The Machinery, we do not have a concept of scenes in the traditional sense. All we have are Entities. Therefore any Entity can function as a scene. All you need is to add child entities to a parent Entity. The Editor will remember the last opened Entity. 
