--- a/the_editor/asset_browser.html
+++ b/the_editor/asset_browser.html
@@ -160,7 +160,10 @@
 <p>As the image shows, the asset browser contains two components: The Directory Tree View of your project and the actual Asset View Panel.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#structure">Structure</a></li>
+<li><a href="#search">Search</a></li>
+<li><a href="#asset-management">Asset management</a></li>
+<li><a href="#keyboard-bindings">Keyboard bindings</a></li>
 </ul>
 <h2 id="structure"><a class="header" href="#structure">Structure</a></h2>
 <p><strong>The Directory Tree View</strong> reflects all directories and subdirectories of your project. You can use it to navigate quickly through your project. The navigation works either via mouse or via keyboard. You have the same management functionality as in the Asset View Panel:</p>
