--- a/the_editor/entity_tree_tab.html
+++ b/the_editor/entity_tree_tab.html
@@ -163,7 +163,15 @@
 <p><img src="https://paper-attachments.dropbox.com/s_688CFE67758A45D845E788E6DA05448A2BCF730C2B07FEF2D06AB18D2C46F736_1625427931504_image.png" alt="" /></p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#how-to-edit-a-scene--entity">How to edit a Scene / Entity</a></li>
+<li><a href="#managing-entities">Managing Entities</a>
+<ul>
+<li><a href="#prototypes-in-the-entity-tree-view">Prototypes in the Entity Tree View</a></li>
+<li><a href="#adding-new-child-entities">Adding new child entities</a></li>
+<li><a href="#searching-and-changing-the-visibility-of-entities">Searching and changing the visibility of Entities</a></li>
+</ul>
+</li>
+<li><a href="#keyboard-bindings">Keyboard bindings</a></li>
 </ul>
 <h2 id="how-to-edit-a-scene--entity"><a class="header" href="#how-to-edit-a-scene--entity">How to edit a Scene / Entity</a></h2>
 <p>In this tab, you can edit any entity from the current project. To start editing, you can either use <strong>Right Click → Open</strong> or <strong>Double Click</strong> the entity to open them. This action will update the Scene Tab and the entity tree view tab. If you close the Scene Tab, the Entity Tree Tab will display an empty tree.</p>
