--- a/the_editor/scene_tab.html
+++ b/the_editor/scene_tab.html
@@ -158,7 +158,18 @@
 <p>The <strong>Scene</strong> tab is the view into your world. You can use the <strong>Scene tab</strong> to select, manipulate assets, and position new ones in your world. </p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#navigate-through-your-scene">Navigate through your Scene</a>
+<ul>
+<li><a href="#opening-an-entity-asset">Opening an Entity Asset</a></li>
+</ul>
+</li>
+<li><a href="#working-in-the-scene">Working in the Scene</a>
+<ul>
+<li><a href="#box-select-in-the-scene-tab">Box Select in the Scene Tab</a></li>
+</ul>
+</li>
+<li><a href="#simulate-your-scene-or-change-visualization-modes">Simulate your Scene or change visualization modes</a></li>
+<li><a href="#keyboard-bindings">Keyboard bindings</a></li>
 </ul>
 <h2 id="navigate-through-your-scene"><a class="header" href="#navigate-through-your-scene">Navigate through your Scene</a></h2>
 <p>The Scene Tab allows for different ways of navigating through your world. The primary method of navigating through the Scene is via the mouse and the keyboard. </p>
