--- a/the_editor/tabs.html
+++ b/the_editor/tabs.html
@@ -158,7 +158,13 @@
 <p>The Machinery is based around a collection of editing <em>Tabs</em>, each with its specific purpose. You can drag the tabs around to rearrange them. Use the <em>Tab</em> menu to open new tabs. It is possible to have multiple tabs of the same type.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#about-tab-wells">About Tab-Wells</a></li>
+<li><a href="#pinning-tabs">Pinning tabs</a>
+<ul>
+<li><a href="#pinning-options">Pinning options</a></li>
+</ul>
+</li>
+<li><a href="#keyboard-bindings">Keyboard bindings</a></li>
 </ul>
 <h2 id="about-tab-wells"><a class="header" href="#about-tab-wells">About Tab-Wells</a></h2>
 <p>Windows in The Machinery have a root <strong>tab-well</strong> covering the whole window. A tab-wells are rectangular areas containing one or more tabs. You can split them either horizontally or vertically to form two-child tab-wells. Also, you can switch around tabs within a tab-well via the keyboard using Ctrl + 1-9 or via Ctrl Page Up/Down.</p>
