--- a/the_truth/custom_truth_type.html
+++ b/the_truth/custom_truth_type.html
@@ -165,7 +165,10 @@
 <p>After this walkthrough you could check out the <a href="https://ourmachinery.github.io/themachinery-books/tutorials/the_truth/custom_asset/index.html">&quot;Create a custom asset&quot;</a> tutorial! </p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#define-a-type">Define a Type</a></li>
+<li><a href="#about-properties">About Properties</a></li>
+<li><a href="#adding-properties">Adding properties</a></li>
+<li><a href="#what-is-next">What is next?</a></li>
 </ul>
 <h2 id="define-a-type"><a class="header" href="#define-a-type">Define a Type</a></h2>
 <p>A Truth-Type in The Machinery consists out of a name (its identifier) and properties. </p>
