--- a/tutorials/creation_graph/from_code.html
+++ b/tutorials/creation_graph/from_code.html
@@ -159,7 +159,9 @@
 <p>The goal of this Creation Graph is to create an image output that we can copy to the viewport. In this example, the image is created by the creation graph and the viewport UV is rendered onto it using an unlit pass. Notice that no geometry has to be defined, as we use the <code>Construct Quad</code> node in clip space. This will procedurally encompass the entire viewport.</p>
 <p><strong>Contents</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#using-the-creation-graph-api">Using the Creation Graph API</a></li>
+<li><a href="#remarks">Remarks</a></li>
+<li><a href="#full-code">Full Code</a></li>
 </ul>
 <p><img src="https://www.dropbox.com/s/k4y8wlwx7y8vll3/tm_tut_creation_graphs_from_code.png?dl=1" alt="" /></p>
 <h2 id="using-the-creation-graph-api"><a class="header" href="#using-the-creation-graph-api">Using the Creation Graph API</a></h2>
