--- a/tutorials/physics/triggers.html
+++ b/tutorials/physics/triggers.html
@@ -158,7 +158,16 @@
 <p>This walkthrough shows you how to create a trigger with the Graph Component. You can find the &quot;source code&quot; in our <a href="https://ourmachinery.com/samples.html">Physic Samples</a>.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#assemble-a-trigger">Assemble a Trigger</a>
+<ul>
+<li><a href="#create-the-trigger-entity">Create the Trigger Entity</a></li>
+<li><a href="#add-the-logic-to-the-graph">Add the logic to the graph</a></li>
+<li><a href="#create-the-ball">Create the ball</a></li>
+<li><a href="#creating-the-scene">Creating the Scene</a></li>
+<li><a href="#spawn-balls">Spawn balls</a></li>
+</ul>
+</li>
+<li><a href="#conclusion">Conclusion</a></li>
 </ul>
 <h2 id="assemble-a-trigger"><a class="header" href="#assemble-a-trigger">Assemble a Trigger</a></h2>
 <p>What is a trigger? </p>
