--- a/tutorials/the_truth/custom_asset/part1.html
+++ b/tutorials/the_truth/custom_asset/part1.html
@@ -172,7 +172,16 @@
 </blockquote>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#first-step-what-kind-of-asset-do-we-want-to-create">First Step: What Kind of Asset Do We Want to Create?</a></li>
+<li><a href="#creating-a-type-in-the-truth">Creating a Type in The Truth</a>
+<ul>
+<li><a href="#what-is-the-difference-between-a-truth-type-and-an-asset">What Is the Difference between a Truth Type and an Asset?</a></li>
+</ul>
+</li>
+<li><a href="#exposing-the-type-to-the-asset-browser">Exposing the Type to the Asset Browser</a></li>
+<li><a href="#what-is-next">What is next?</a></li>
+<li><a href="#appendix-creating-an-asset-from-code">Appendix: Creating an Asset from Code</a></li>
+<li><a href="#full-example-of-basic-asset">Full Example of Basic Asset</a></li>
 </ul>
 <h2 id="first-step-what-kind-of-asset-do-we-want-to-create"><a class="header" href="#first-step-what-kind-of-asset-do-we-want-to-create"><strong>First Step:</strong> What Kind of Asset Do We Want to Create?</a></h2>
 <p>The Machinery comes with some predefined asset types, but these types might not cover all types of data you want to represent in the engine. Luckily, you can extend the asset types supported by using plugins.</p>
