--- a/tutorials/the_truth/custom_asset/part2.html
+++ b/tutorials/the_truth/custom_asset/part2.html
@@ -166,7 +166,13 @@
 </blockquote>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#adding-more-properties-to-the-the-truth-type">Adding More Properties to the The Truth Type</a>
+<ul>
+<li><a href="#custom-ui">Custom UI</a></li>
+</ul>
+</li>
+<li><a href="#what-is-next">What Is Next?</a></li>
+<li><a href="#full-example-of-basic-asset">Full Example of Basic Asset</a></li>
 </ul>
 <h2 id="adding-more-properties-to-the-the-truth-type"><a class="header" href="#adding-more-properties-to-the-the-truth-type">Adding More Properties to the The Truth Type</a></h2>
 <p>The Truth type we created in Part 1 cannot do much, because it doesn't have any properties:</p>
