--- a/tutorials/the_truth/custom_asset/part3.html
+++ b/tutorials/the_truth/custom_asset/part3.html
@@ -164,7 +164,16 @@
 </blockquote>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#custom-importer-for-text-files">Custom importer for text files</a></li>
+<li><a href="#import-task-setup">Import Task Setup</a></li>
+<li><a href="#import-task-implementation">Import Task Implementation</a></li>
+<li><a href="#enabling-reimport">Enabling Reimport</a></li>
+<li><a href="#refactor-the-custom-ui-import-functionality">Refactor the Custom UI Import Functionality</a></li>
+<li><a href="#the-end">The End</a>
+<ul>
+<li><a href="#full-example-of-basic-asset">Full Example of Basic Asset</a></li>
+</ul>
+</li>
 </ul>
 <h2 id="custom-importer-for-text-files"><a class="header" href="#custom-importer-for-text-files">Custom importer for text files</a></h2>
 <p>In this part, we will add the ability to import a text file into the Engine. To implement an importer, we need the following APIs:</p>
