--- a/tutorials/the_truth/drag_and_drop.html
+++ b/tutorials/the_truth/drag_and_drop.html
@@ -165,7 +165,19 @@
 <p>This walkthrough will refer to the text asset example as the asset we want to extend! If you have not followed it here is the link: <a href="https://ourmachinery.github.io/themachinery-books/tutorials/the_truth/custom_asset/index.html">Custom Asset</a></p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#adding-drag-and-drop-to-our-asset">Adding Drag and Drop to our asset</a>
+<ul>
+<li><a href="#asset-scene-aspect">Asset Scene Aspect</a></li>
+</ul>
+</li>
+<li><a href="#the-story-component">The story component</a>
+<ul>
+<li><a href="#custom-ui">Custom UI</a></li>
+</ul>
+</li>
+<li><a href="#using-the-asset-picker-property-aspect">Using the Asset Picker Property Aspect</a></li>
+<li><a href="#drag-and-drop-a-text-asset-into-the-scene-and-create-an-entity">Drag and drop a Text Asset into the Scene and create an entity</a></li>
+<li><a href="#modify-a-already-existing-asset">Modify a already existing asset</a></li>
 </ul>
 <h2 id="adding-drag-and-drop-to-our-asset"><a class="header" href="#adding-drag-and-drop-to-our-asset">Adding Drag and Drop to our asset</a></h2>
 <p>In this example, we are going back to our text asset sample. In that sample, we have the following function to register the asset to the Truth:</p>
