--- a/tutorials/the_truth/open_asset.html
+++ b/tutorials/the_truth/open_asset.html
@@ -165,7 +165,20 @@
 <p>This walkthrough will refer to the text asset example as the asset we want to extend! If you have not followed it, here is the link: <a href="https://ourmachinery.github.io/themachinery-books/tutorials/the_truth/custom_asset/index.html">Custom Asset</a>.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#new-tab">New Tab</a>
+<ul>
+<li><a href="#implementing-the-functions">Implementing the functions</a>
+<ul>
+<li><a href="#the-create-function">The Create Function</a></li>
+<li><a href="#the-update-function">The Update Function</a></li>
+<li><a href="#the-set-root--root-function">The set root / root function</a></li>
+</ul>
+</li>
+<li><a href="#let-us-test-the-tab">Let us test the Tab</a></li>
+<li><a href="#source-code">Source Code</a></li>
+</ul>
+</li>
+<li><a href="#open-the-tab">Open the Tab</a></li>
 </ul>
 <h2 id="new-tab"><a class="header" href="#new-tab">New Tab</a></h2>
 <p>The first cause of action is to create the Tab we want to open. </p>
