--- a/tutorials/ui/build_custom_ui_controls/part1.html
+++ b/tutorials/ui/build_custom_ui_controls/part1.html
@@ -159,7 +159,9 @@
 <p>During this tutorial, you’ll implement the <code>tm_ui_custom_controls</code> plugin, which will contain the <code>tm_ui_custom_controls_api</code> for draw custom controls in UI and <code>tm_ui_custom_controls_tab</code> custom tab in order to visualize results in a separate tab.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#environment-setup">Environment setup</a></li>
+<li><a href="#circular-custom-button">Circular Custom Button:</a></li>
+<li><a href="#drawing-text">Drawing text</a></li>
 </ul>
 <h2 id="environment-setup"><a class="header" href="#environment-setup">Environment setup</a></h2>
 <p>During this tutorial, you’ll build the <code>tm_ui_custom_controls</code> plugin, which will contain the <code>tm_ui_custom_controls_api</code> for draw custom controls and <code>tm_ui_custom_controls_tab</code> custom tab in order to visualize results in a separate tab.</p>
