--- a/tutorials/ui/toolbars-overlays.html
+++ b/tutorials/ui/toolbars-overlays.html
@@ -160,7 +160,9 @@
 <p>In this walkthrough, we will learn how to write our little toolbar for our newly added tab! This walkthrough requires you to know how our plugin system works.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#implement-a-toolbar-in-a-tab">Implement a Toolbar in a Tab</a></li>
+<li><a href="#tab-overlays">Tab Overlays</a></li>
+<li><a href="#how-to-use-toolbars-outside-of-the-machinery-tabs">How to use toolbars outside of The Machinery tabs</a></li>
 </ul>
 <h2 id="implement-a-toolbar-in-a-tab"><a class="header" href="#implement-a-toolbar-in-a-tab">Implement a Toolbar in a Tab</a></h2>
 <p>To begin with, we need to create a new tab plugin. We go on <strong>File -&gt; New Plugin -&gt; Tab.</strong> </p>
