--- a/build_tools/tmbuild.html
+++ b/build_tools/tmbuild.html
@@ -177,7 +177,13 @@
 </ul>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#installing-tmbuild">Installing tmbuild</a></li>
+<li><a href="#set-up-our-environment-variables">Set up our environment variables</a></li>
+<li><a href="#let-us-build-a-plugin">Let us Build a plugin.</a></li>
+<li><a href="#let-us-build-a-specific-project">Let us build a specific project.</a></li>
+<li><a href="#how-how-to-package-a-project-via-tmbuild">How how to package a project via tmbuild?</a></li>
+<li><a href="#how-to-build-or-manipulate-tmbuild-from-source">How to build or manipulate tmbuild from source</a></li>
+<li><a href="#how-to-add-tmbuild-globally-accessible">How to add tmbuild globally accessible?</a></li>
 </ul>
 <h2 id="installing-tmbuild"><a class="header" href="#installing-tmbuild"><strong>Installing tmbuild</strong></a></h2>
 <p>When you download and unzip <a href="https://ourmachinery.com/">The Machinery</a> either via the <a href="https://ourmachinery.com/beta.html">website</a> or via the <a href="#">download tab</a> you can find tmbuild in the bin folder in the root. </p>
