--- a/build_tools/tmbuild_package_reference.html
+++ b/build_tools/tmbuild_package_reference.html
@@ -166,7 +166,29 @@ Every package <code>json</code> file is structured in its core like this:</p>
 Steps are defined as a normal <code>json</code> object. The following list displays all the functions which can be used plus adequate examples.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#utilities">Utilities</a>
+<ul>
+<li><a href="#logging">Logging</a></li>
+<li><a href="#change-directory">Change directory</a></li>
+<li><a href="#platforms">Platforms</a></li>
+</ul>
+</li>
+<li><a href="#actions">Actions</a></li>
+<li><a href="#filesystem-operations">Filesystem operations</a>
+<ul>
+<li><a href="#build"><code>build</code></a></li>
+<li><a href="#copy-files"><code>copy-files</code></a></li>
+<li><a href="#copy-file-patterns"><code>copy-file-patterns</code></a></li>
+<li><a href="#delete-dirs"><code>delete-dirs</code></a></li>
+<li><a href="#delete-file-patterns"><code>delete-file-patterns</code></a></li>
+<li><a href="#docgen"><code>docgen</code></a></li>
+<li><a href="#localize"><code>localize</code></a></li>
+<li><a href="#set-sdk-dir"><code>set-sdk-dir</code></a></li>
+<li><a href="#zip"><code>zip</code></a></li>
+<li><a href="#test"><code>test</code></a></li>
+<li><a href="#clean"><code>clean</code></a></li>
+</ul>
+</li>
 </ul>
 <h2 id="utilities"><a class="header" href="#utilities">Utilities</a></h2>
 <h3 id="logging"><a class="header" href="#logging">Logging</a></h3>
