--- a/gameplay_coding/ecs/index.html
+++ b/gameplay_coding/ecs/index.html
@@ -164,7 +164,25 @@ allows us to compose complex objects from simpler components in a flexible and p
 <p>While Systems are just an update with a provided access to the entity context. When we refer to a context in this chapter we mean the entity context.</p>
 <p><strong>Table of Content</strong></p>
 <ul>
-<li>{:toc}</li>
+<li><a href="#what-is-an-entity">What is an Entity?</a></li>
+<li><a href="#what-is-an-entity-context">What is an Entity Context?</a></li>
+<li><a href="#where-do-entities-live-lifecycle">Where do Entities live? (Lifecycle)</a></li>
+<li><a href="#how-is-the-data-stored">How is the data stored?</a></li>
+<li><a href="#what-is-an-entity-type--archetype">What is an Entity type / Archetype?</a></li>
+<li><a href="#what-are-components">What are Components?</a>
+<ul>
+<li><a href="#best-practice">Best Practice</a></li>
+</ul>
+</li>
+<li><a href="#what-is-a-component-manager">What is a Component Manager?</a></li>
+<li><a href="#game-logic">Game Logic</a>
+<ul>
+<li><a href="#what-are-engines">What are Engines?</a></li>
+<li><a href="#what-are-systems">What are Systems?</a></li>
+</ul>
+</li>
+<li><a href="#how-are-entity-assets-translated-to-ecs-entities">How are Entity Assets translated to ECS Entities?</a></li>
+<li><a href="#child-entities">Child entities</a></li>
 </ul>
 <h2 id="what-is-an-entity"><a class="header" href="#what-is-an-entity">What is an Entity?</a></h2>
 <p>An entity is the fundamental part of the Entity Component System. An entity is a handle to your data. The entity itself does not store any data or behavior.  The data is stored in components, which are associated with the Entity. The behavior is defined in Systems and Engines which process those components. Therefore an entity acts as an identifier or key to the data stored in components.</p>
